--- a/team.html
+++ b/team.html
@@ -133,7 +133,7 @@
 <h6>C&O</h6>
 <a href="https://www.facebook.com/profile.php?id=100011603418655" target="_blank"><i class="fa fa-facebook"></i></a>
 <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.linkedin.com/in/marcos-motta-b659a4154/" target="_blank"><i class="fa fa-linkedin"></i></a>
 <a href="https://github.com/marcosmtt" target="_blank"><i class="fa fa-github"></i></a>
 </div>
 </div><!-- /panel -->
@@ -181,7 +181,7 @@
 <h6>Chief Technology Officer</h6>
 <a href="https://www.facebook.com/yurinbento" target="_blank"><i class="fa fa-facebook"></i></a>
 <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.linkedin.com/in/yuri-bento-524a04154/" target="_blank"><i class="fa fa-linkedin"></i></a>
 <a href="https://github.com/yurinb" target="_blank"><i class="fa fa-github"></i></a>
 </div>
 </div><!-- /panel -->
