update team desc

--- a/team.html
+++ b/team.html
@@ -118,7 +118,7 @@
 <!-- title section -->
 <h2 class="title-section">Our Team</h2><!-- /title section -->
 <div class="line-separate line-white line-center"><span></span></div>
-<p>Patrick é o melhor sinuqueiro de Pelotas</p>
+<!-- <p>Patrick é o melhor sinuqueiro de Pelotas</p> -->
 </div>
 <!-- /header section -->
 	
